gitops/platform/namespace-externalsecret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
  labels:
    app.kubernetes.io/managed-by: "argocd"
